# unicesumar-aula6-estrutura-de-dados

./: CMakeLists.txt  main.c  readme.md
01_pilha_lista_dinamica/: 01_pilha_lista_dinamica.c  01_pilha_lista_dinamica.h
02_fila_lista_dinamica/: 02_fila_lista_dinamica.c  02_fila_lista_dinamica.h
